--- a/UK.css
+++ b/UK.css
@@ -1,195 +1,119 @@
+
+
 body {
 
  
-    background-image:url("29.png");
-    
+    background-color:#A89F9A ;
   
 }
 .l1{
- 
-   margin-right: 190px;
-  margin-left: 230PX;
-  height: 100PX;
-  
+     display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
 }
 
-.HEADER{
-    margin-top: auto;
+.header{
+    margin-top: 29px;
+    padding: 10;
     font-size: 29px;
     font-style: italic;
     font-weight: bold;
-    color: #E7DED7;
+    color: #B73032;
     text-align:center;
-    text-shadow: 2px 2px #B73032;
+    text-shadow: 2px 2px #ff0000;
+    
     
 }
- 
-
-    
-    
-
 .main-contect li{
-     list-style: none;
-        float: right;
-        
-       align-content: center;
-        background-color: #E7DED7;
-        background-size:10PX;
-    width: 40%;
-    height: 40%;
-    border-radius: 25px;
-   display: flex;
- 
-    margin-right: 20px;
-   
-  
+        width: 70 px;
+        list-style: none;
+        float: left;
+        text-align: center;
+        margin-right: 60px;
           
        
 }
-
 .i1{
-    
-  
- 
-    width: 40%;
-    height: 40%;
+      background-color: #3A3755;
+    width: 15%;
+    height: 35%;
+    float: left;
     border-radius: 25px;
-    float: right;
-    margin-right: 20px;
-    margin-left: 229px;
-  
-   
-  
+    
 }
 .i2{
-       display: flex;
-
-
-  vertical-align: middle;
-  background-color: #E7DED7;
-    width: 20%;
-    height: 40%;
-    border-radius: 25px;
+ background-color: #721C1C;
+    width: 15%;
+    height: 35%;
     float: left;
-    margin-right: 20px;
-  
-    
+    border-radius: 25px;
+    margin-right: 25px;
+	 margin-left: 13px;
 }
-
 .i3{
-       display: flex;
-  
-
-  vertical-align: middle;
-  background-color: #E7DED7;
-    width: 20%;
-    height: 40%;
-    border-radius: 25px;
+background-color: #3A3755;
+    width: 15%;
+    height: 35%;
     float: left;
+    border-radius: 25px;
     margin-right: 20px;
-     
-    
+	 margin-left: 0px;
+
 }
-
 .i4{
-       display: flex;
- 
-  
-  vertical-align: middle;
-  background-color: #E7DED7;
-    width: 20%;
-    height: 40%;
-    border-radius: 25px;
+      background-color: #721C1C;
+    width: 15%;
+    height: 35%;
     float: left;
-    margin-right: 20px;
-    margin-left: 229px;
-    margin-top: 40px;
-    
-  
+    border-radius: 25px;
+	
+	 
 }
 .i5{
-       display: flex;
-
-  vertical-align: middle;
-  background-color: #E7DED7;
-    width: 20%;
-    height: 40%;
-    border-radius: 25px;
+ background-color: #3A3755;
+    width: 15%;
+    height: 35%;
     float: left;
-    margin-right: 50px;
-    margin-left:auto;
-    margin-top: 40px;
- 
-    
+    border-radius: 25px;
+    margin-right: 25px;
+	 margin-left: 13px;
+	 
 }
-
 .i6{
-       display: flex;
-
- 
-  vertical-align: middle;
-  background-color: #E7DED7;
-    width: 20%;
-    height: 40%;
-    border-radius: 25px;
+     background-color: #721C1C;
+    width: 15%;
+    height: 35%;
     float: left;
-   margin-right: 50px;
-    margin-left:auto;
-    margin-top: 40px;
-      
-    
+    border-radius: 25px;
+    margin-right: 20px;
+	 margin-left: 0px;
 }
 .i7{
-       display: flex;
-
-  vertical-align: middle;
-  background-color: #E7DED7;
-    width: 20%;
-    height: 40%;
-    border-radius: 25px;
+     background-color: #3A3755;
+    width: 15%;
+    height: 35%;
     float: left;
-    margin-right: 50px;
-     margin-TOP:40PX;
-    margin-left: 229px;
-    
-    
+    border-radius: 25px;
+    margin-right: 20px;
+	 margin-left: 0px;
 }
 .i8{
-       display: flex;
- 
-  vertical-align: middle;
-  background-color: #E7DED7;
-    width: 20%;
-    height: 40%;
-    border-radius: 25px;
+     background-color: #721C1C;
+    width: 15%;
+    height: 35%;
     float: left;
-    margin-right: 50px;
-    margin-left:auto;
-    margin-top: 40px;
-      
-    
+    border-radius: 25px;
+    margin-right: 20px;
+	 margin-left: 0px;
 }
 .i9{
-       display: flex;
-  
-
-  vertical-align: middle;
-  background-color: #E7DED7;
-    width: 20%;
-    height: 40%;
-    border-radius: 25px;
+      background-color: #3A3755;
+    width: 15%;
+    height: 35%;
     float: left;
-    margin-right: 50px;
-    margin-left:auto;
-    margin-top: 40px;
-     
-   
+    border-radius: 25px;
+    margin-right: 20px;
+	 margin-left: 0px;
 }
 
-.MA{
-    color: #E7DED7;
-    margin-top: 450px;
-    font-size:10px;
-    text-align: center;
-     text-shadow: 1px 1px #000000;
-}
